--- a/public/11f/main.css
+++ b/public/11f/main.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+.container:after { content: " "; display: table; clear: both; }
+
 * { box-sizing: border-box; }
 
 html { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; }
