--- a/sourse/11f/main.scss
+++ b/sourse/11f/main.scss
@@ -37,6 +37,7 @@ body,html{
 }
 
 .container{
+  @extend %clearfix;
   position: relative;
   width: rem(1280px);
   margin: 0 auto;
@@ -158,8 +159,6 @@ h1{
     position: relative;
     width: 30%;
     height: 100%;
-    // height: 0;
-    // padding-bottom: 44%;
     color: #fff;
     .num{
       font-size: rem(36px);
